added the slack meta tag

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -7,6 +7,10 @@ html
 			name='viewport'
 			content='width=device-width, initial-scale=1, shrink-to-fit=no'
 		)
+		meta(
+			name='slack-app-id' 
+			content='A5BNN269H'
+		)
 		link(
 			href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' 
 			rel='stylesheet' 
