--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -33,6 +33,13 @@ html
 			media='screen'
 		)
 	body
+		.container
+			while message = flash.shift()
+				-var alert = 'alert alert-dismissible fade show alert-' + message.type
+				div(class=alert role='alert')
+					button(type='button' class='close' data-dismiss='alert')
+						span(aria-hidden='true') &times;
+					p=	message.message
 		nav.navbar.navbar-default.navbar-top
 			.container
 				.row
