--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -38,7 +38,7 @@ html
 			div(role='alert' class=alert)
 				button(type='button' class='close' data-dismiss='alert')
 					span(aria-hidden='true') &times;
-				message.message
+				p= message.message
 		nav.navbar.navbar-default.navbar-top
 			.container
 				.row
