--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -32,13 +32,13 @@ html
 			href='/css/custom.css'
 			media='screen'
 		)
-	body
+	body.text-center
 		while message = flash.shift()
 			-var alert = 'alert alert-dismissible alert-' + message.type
 			div(role='alert' class=alert)
 				button(type='button' class='close' data-dismiss='alert')
 					span(aria-hidden='true') &times;
-				p= message.message
+				span= message.message
 		nav.navbar.navbar-default.navbar-top
 			.container
 				.row
