--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -39,12 +39,12 @@ html
 				button(type='button' class='close' data-dismiss='alert')
 					span(aria-hidden='true') &times;
 				span= message.message
-		nav.navbar.navbar-default.navbar-top
+		nav.navbar.navbar-default.navbar-static-top
 			.container
 				.row
 					.col-md-12.text-center
 						h1 Temere
-		.container
+		.container#info-div
 			.col-lg-8.col-lg-offset-2.text-center
 				h3 What is Temere?
 				p Temere is a random name generator for you slack team!
@@ -53,9 +53,19 @@ html
 				p Add Temere to your slack team.
 				a(href='https://slack.com/oauth/authorize?&client_id=169886457350.181770074323&scope=commands')
 					img(alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x")
+
+		hr
+		h3 Test it Here!
+		.container
+			.col-lg-6.col-lg-offset-3.col-md-6.col-md-offset-3.col-sm-6.col-sm-offset-3.text-center
+				label.sr-only Random Name
+				input.form-control.mb-2.mr-sm-2.mb-sm-0.text-center#random-name-field(type='text')
+				button#request-random-button.btn.btn-success Generate Random Name
+
 		footer.footer
 			.container.text-center
 				a(href='https://github.com/sego90/temere/')
 					i.fa.fa-github.fa-5(aria-hidden='true')
 	script(src='jquery/dist/jquery.min.js' crossorigin='anonymous')
 	script(src='js/bootstrap.min.js' crossorigin='anonymous')
+	script(src='js/main.js')
