--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -55,7 +55,7 @@ html
 					img(alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x")
 
 		hr
-		h3 Test it Here!
+		h3 Test it here!
 		.container
 			.col-lg-6.col-lg-offset-3.col-md-6.col-md-offset-3.col-sm-6.col-sm-offset-3.text-center
 				label.sr-only Random Name
