--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,37 +1,4 @@
-doctype html
-html
-	head
-
-		meta(charset='utf-8')
-		meta(
-			name='viewport'
-			content='width=device-width, initial-scale=1, shrink-to-fit=no'
-		)
-		meta(
-			name='slack-app-id' 
-			content='A5BNN269H'
-		)
-		link(
-			href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' 
-			rel='stylesheet' 
-			integrity='sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN' 
-			crossorigin='anonymous'
-		)
-		link(
-			rel='stylesheet'
-			href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'
-			integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u' 
-			crossorigin='anonymous'
-		)
-		link(
-			href='https://fonts.googleapis.com/css?family=Merriweather'
-			rel='stylesheet'
-		)
-		link(
-			rel='stylesheet'
-			href='/css/custom.css'
-			media='screen'
-		)
+include head
 	body.text-center
 		while message = flash.shift()
 			-var alert = 'alert alert-dismissible alert-' + message.type
@@ -61,7 +28,8 @@ html
 				label.sr-only Random Name
 				input.form-control.mb-2.mr-sm-2.mb-sm-0.text-center#random-name-field(type='text')
 				button#request-random-button.btn.btn-success Generate Random Name
-
+		a(href='/support') Support
+		a(href='/privacy') Privacy Policy
 		footer.footer
 			.container.text-center
 				a(href='https://github.com/sego90/temere/')
